// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeMatchingFilters should not remove 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "y",
            "operator": "eq",
            "value": 2,
          },
          {
            "field": "z",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should remove 1`] = `
{
  "filter": {
    "filters": [
      {
        "field": "z",
        "operator": "eq",
        "value": 2,
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should remove sub filters 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "z",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
      {
        "filters": [
          {
            "field": "a",
            "operator": "eq",
            "value": 2,
          },
          {
            "field": "b",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
      {
        "filters": [
          {
            "field": "e",
            "operator": "eq",
            "value": 2,
          },
          {
            "field": "f",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should work with non-filtered odata states 1`] = `
{
  "filter": {
    "filters": [],
    "logic": "and",
  },
}
`;
